data/derived/fa15/progs/unify/prog4036.ml.out
Characters 175-211:
  | Sine e'                -> Printf.sprintf("sin(pi*" ^ exprToString(e') ^ ")");
                                            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type string but an expression was expected of type
         ('a, unit, string) format =
           ('a, unit, string, string, string, string)
           CamlinternalFormatBasics.format6
